--- a/pages/notifications.html
+++ b/pages/notifications.html
@@ -21,10 +21,198 @@
   
 
   <section class="cartSection">
+
+
+    <div class="AlertinfoBox">
+      <p>Nese doni te njoftoheni per kto produkte momentin qe dalin ne zbritje duhet te abonoheni</p>
+    </div>
+
+
+    
     <table>
       <tbody>
         <!-- Product Box  -->
 
+
+        <tr>
+          <!-- Product Image Box -->
+          <td class="prodBox">
+            <div class="cartStoreImg">
+              <img src="/images/viva fresh.jpg" alt="Store Image">
+            </div>
+            <img src="/images/2.png" alt="Product Image">
+          </td>
+          <td class="infBox">
+            <p class="infTitle">Senf Remi 400gr</p>
+            <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+              <div class="infPrice">
+                <span>3.61</span>
+                <span>€</span>
+              </div>
+              <!-- Quantity Incress and Decress Container-->
+              <div style="display: flex;align-items: center;">
+                <button class="quantity-btn lowCon">&#8722;</button>
+                <input type="number" class="quantity-input" value="1">
+                <button class="quantity-btn highCon">&#x2b;</button>
+              </div>
+            </div>
+            <div class="cartCheckbx">
+              <span class="material-symbols-outlined">
+                delete
+                </span>
+            </div>
+          </td>
+        </tr>
+
+        <tr>
+          <!-- Product Image Box -->
+          <td class="prodBox">
+            <div class="cartStoreImg">
+              <img src="/images/viva fresh.jpg" alt="Store Image">
+            </div>
+            <img src="/images/2.png" alt="Product Image">
+          </td>
+          <td class="infBox">
+            <p class="infTitle">Senf Remi 400gr</p>
+            <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+              <div class="infPrice">
+                <span>3.61</span>
+                <span>€</span>
+              </div>
+              <!-- Quantity Incress and Decress Container-->
+              <div style="display: flex;align-items: center;">
+                <button class="quantity-btn lowCon">&#8722;</button>
+                <input type="number" class="quantity-input" value="1">
+                <button class="quantity-btn highCon">&#x2b;</button>
+              </div>
+            </div>
+            <div class="cartCheckbx">
+              <span class="material-symbols-outlined">
+                delete
+                </span>
+            </div>
+          </td>
+        </tr>
+
+        <tr>
+          <!-- Product Image Box -->
+          <td class="prodBox">
+            <div class="cartStoreImg">
+              <img src="/images/viva fresh.jpg" alt="Store Image">
+            </div>
+            <img src="/images/2.png" alt="Product Image">
+          </td>
+          <td class="infBox">
+            <p class="infTitle">Senf Remi 400gr</p>
+            <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+              <div class="infPrice">
+                <span>3.61</span>
+                <span>€</span>
+              </div>
+              <!-- Quantity Incress and Decress Container-->
+              <div style="display: flex;align-items: center;">
+                <button class="quantity-btn lowCon">&#8722;</button>
+                <input type="number" class="quantity-input" value="1">
+                <button class="quantity-btn highCon">&#x2b;</button>
+              </div>
+            </div>
+            <div class="cartCheckbx">
+              <span class="material-symbols-outlined">
+                delete
+                </span>
+            </div>
+          </td>
+        </tr>
+
+        <tr>
+          <!-- Product Image Box -->
+          <td class="prodBox">
+            <div class="cartStoreImg">
+              <img src="/images/viva fresh.jpg" alt="Store Image">
+            </div>
+            <img src="/images/2.png" alt="Product Image">
+          </td>
+          <td class="infBox">
+            <p class="infTitle">Senf Remi 400gr</p>
+            <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+              <div class="infPrice">
+                <span>3.61</span>
+                <span>€</span>
+              </div>
+              <!-- Quantity Incress and Decress Container-->
+              <div style="display: flex;align-items: center;">
+                <button class="quantity-btn lowCon">&#8722;</button>
+                <input type="number" class="quantity-input" value="1">
+                <button class="quantity-btn highCon">&#x2b;</button>
+              </div>
+            </div>
+            <div class="cartCheckbx">
+              <span class="material-symbols-outlined">
+                delete
+                </span>
+            </div>
+          </td>
+        </tr>
+
+        <tr>
+          <!-- Product Image Box -->
+          <td class="prodBox">
+            <div class="cartStoreImg">
+              <img src="/images/viva fresh.jpg" alt="Store Image">
+            </div>
+            <img src="/images/2.png" alt="Product Image">
+          </td>
+          <td class="infBox">
+            <p class="infTitle">Senf Remi 400gr</p>
+            <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+              <div class="infPrice">
+                <span>3.61</span>
+                <span>€</span>
+              </div>
+              <!-- Quantity Incress and Decress Container-->
+              <div style="display: flex;align-items: center;">
+                <button class="quantity-btn lowCon">&#8722;</button>
+                <input type="number" class="quantity-input" value="1">
+                <button class="quantity-btn highCon">&#x2b;</button>
+              </div>
+            </div>
+            <div class="cartCheckbx">
+              <span class="material-symbols-outlined">
+                delete
+                </span>
+            </div>
+          </td>
+        </tr>
+
+        <tr>
+          <!-- Product Image Box -->
+          <td class="prodBox">
+            <div class="cartStoreImg">
+              <img src="/images/viva fresh.jpg" alt="Store Image">
+            </div>
+            <img src="/images/2.png" alt="Product Image">
+          </td>
+          <td class="infBox">
+            <p class="infTitle">Senf Remi 400gr</p>
+            <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+              <div class="infPrice">
+                <span>3.61</span>
+                <span>€</span>
+              </div>
+              <!-- Quantity Incress and Decress Container-->
+              <div style="display: flex;align-items: center;">
+                <button class="quantity-btn lowCon">&#8722;</button>
+                <input type="number" class="quantity-input" value="1">
+                <button class="quantity-btn highCon">&#x2b;</button>
+              </div>
+            </div>
+            <div class="cartCheckbx">
+              <span class="material-symbols-outlined">
+                delete
+                </span>
+            </div>
+          </td>
+        </tr>
 
         <tr>
           <!-- Product Image Box -->
