--- a/pages/notifications.html
+++ b/pages/notifications.html
@@ -15,7 +15,7 @@
 
   <header class="cartHeader">
     <a href="/index.html"><span class="material-symbols-outlined btn-pad">arrow_back</span></a>
-    <h3>Favorites</h3>
+    <h3>Notifications</h3>
     <span class="material-symbols-outlined btn-pad">delete</span>
   </header>
   
