--- a/index.html
+++ b/index.html
@@ -41,7 +41,14 @@
       </div>
       <button><span class="material-symbols-outlined admin-panel footer-icon btn-pad open-modal-btn" data-target="#modal7">add</span></button>
       <div class="flex-alg-center">
-        <a href="pages/notifications.html"><span class="material-symbols-outlined admin-panel footer-icon btn-pad">notifications</span></a>
+        <!--        <a href="pages/notifications.html">
+          <div class="d-flex flex-align-center btn-pad col-gap-5">
+            <p style="color: white;">Njoftimet</p>
+            <span class="material-symbols-outlined footer-icon">notifications</span>
+          </div>
+        </a>
+        -->
+
         <!--TODO: nuk klikohet notifikimi me button bashk me rregullu -->
         <div class="shopping-cart-container">
           <a href="/pages/cart.html"><button><span class="material-symbols-outlined footer-icon btn-pad">shopping_cart</span></button></a>
@@ -123,6 +130,7 @@
                 <div class="dropdown-content">
                   <button class="dropdown-option open-modal-btn" data-target="#modal2">Edit</button>
                   <button class="dropdown-option open-modal-btn" data-target="#modal3">Delete</button>
+                  <button class="dropdown-option open-modal-btn" data-target="#modal16">Njoftime</button>
                 </div>
               </div>
               <div class="product-store-container">
@@ -1067,6 +1075,45 @@
 
 
 <!-- End of Admin Settings Modal  -->
+
+
+<!-- Alert Product Modal  -->
+
+<div id="modal16" class="modal modal2">
+  <div class="title-close-btn">
+    <span class="mod-title">Premium Package</span>
+    <div class="close-modal-btn">
+      <span class="material-symbols-outlined">close</span>
+    </div>
+  </div>
+  <div class="modal-content-admin">
+    <div class="input-g-container">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </div>
+  </div>
+  <div class="modal-buttons">
+    <button>No</button>
+    <button>Yes</button>
+  </div>
+</div>
+
+
+<!-- End of Aleret Modal  -->
 
 <!-- Admin Panel Modal Styling  -->
 
