--- a/pages/notifications.html
+++ b/pages/notifications.html
@@ -24,7 +24,7 @@
 
 
     <div class="AlertinfoBox">
-      <p>Nese doni te njoftoheni per kto produkte momentin qe dalin ne zbritje duhet te abonoheni</p>
+      <p>Njoftimi për 1 produkt është falas, ndërsa për të shtuar më shumë produkte, duhet të abonoheni për 1€ në muaj ose 12€ në vit.</p>
     </div>
 
 
