--- a/index.html
+++ b/index.html
@@ -930,36 +930,12 @@
   <div class="modal-content-admin">
     <!-- Chip Container -->
     <div class="chip-container">
-      <div class="chip">Vaj ulliri</div>
-      <div class="chip">Soda Teshave</div>
-      <div class="chip">Mish Viqi</div>
-      <div class="chip">Majonez</div>
-      <div class="chip">Keqap</div>
-      <div class="chip">Butter</div>
-      <div class="chip">Vaj ulliri</div>
-      <div class="chip">Soda Teshave</div>
-      <div class="chip">Mish Viqi</div>
-      <div class="chip">Majonez</div>
-      <div class="chip">Keqap</div>
-      <div class="chip">Butter</div>
-      <div class="chip">Vaj ulliri</div>
-      <div class="chip">Soda Teshave</div>
-      <div class="chip">Mish Viqi</div>
-      <div class="chip">Majonez</div>
-      <div class="chip">Keqap</div>
-      <div class="chip">Butter</div>
-      <div class="chip">Vaj ulliri</div>
-      <div class="chip">Soda Teshave</div>
-      <div class="chip">Mish Viqi</div>
-      <div class="chip">Majonez</div>
-      <div class="chip">Keqap</div>
-      <div class="chip">Butter</div>
-      <div class="chip">Vaj ulliri</div>
-      <div class="chip">Soda Teshave</div>
-      <div class="chip">Mish Viqi</div>
-      <div class="chip">Majonez</div>
-      <div class="chip">Keqap</div>
-      <div class="chip">Butter</div>
+      <div class="chip">Bylmet</div>
+      <div class="chip">Mish dhe peshk</div>
+      <div class="chip">Fruta</div>
+      <div class="chip">Perime</div>
+      <div class="chip">Pije</div>
+      <div class="chip">Ëmbëlsira</div>
    </div>
     <!-- End of  Chip Container -->
   </div>
