--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <!--TODO: nuk klikohet notifikimi me button bashk me rregullu -->
         <div class="shopping-cart-container">
-          <a href="/pages/cart.html"><button><span class="material-symbols-outlined footer-icon btn-pad">shopping_cart</span></button></a>
+          <a href="./pages/cart.html"><button><span class="material-symbols-outlined footer-icon btn-pad">shopping_cart</span></button></a>
         </div>
         <button><span class="material-symbols-outlined user-panel footer-icon btn-pad open-modal-btn" data-target="#modal9">login</span></button>
         <button class="footer-icon btn-pad" onclick="toggleDropdown()"><span class="material-symbols-outlined admin-panel">account_circle</span></button>
