--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@
       </div>
       <button><span class="material-symbols-outlined admin-panel footer-icon btn-pad open-modal-btn" data-target="#modal7">add</span></button>
       <div class="flex-alg-center">
-        <!--        <a href="pages/notifications.html">
+      <a href="pages/notifications.html">
           <div class="d-flex flex-align-center btn-pad col-gap-5">
-            <p style="color: white;">Njoftimet</p>
             <span class="material-symbols-outlined footer-icon">notifications</span>
           </div>
         </a>
-        -->
+        
 
         <!--TODO: nuk klikohet notifikimi me button bashk me rregullu -->
         <div class="shopping-cart-container">
